First changes for version 2

--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -169,54 +169,27 @@
                         </li>
                     </ul>
                 </li>
-                <!--<li>-->
+                <li>
 
-                    <!--<a href="javascript:void(0);" class="have-submenu">-->
-                        <!--<span class="icon-thumbnail"><i class="dripicons-align-justify"></i></span>-->
-                        <!--<span class="title">Consolidations</span>-->
-                    <!--</a>-->
-                    <!--<ul class="sub-menu">-->
-                        <!--<li>-->
-                            <!--<a href="consolidations.html">-->
-                                <!--<span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>-->
-                                <!--<span class="title">Pending</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="done_consolidations.html">-->
-                                <!--<span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>-->
-                                <!--<span class="title">Done</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li>-->
-
-                    <!--<a href="javascript:void(0);" class="have-submenu">-->
-                        <!--<span class="icon-thumbnail"><i class="dripicons-user-group"></i></span>-->
-                        <!--<span class="title">Personnel</span>-->
-                    <!--</a>-->
-                    <!--<ul class="sub-menu">-->
-                        <!--<li>-->
-                            <!--<a href="personnel.html">-->
-                                <!--<span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>-->
-                                <!--<span class="title">Pending</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="done_personnel.html">-->
-                                <!--<span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>-->
-                                <!--<span class="title">Done</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="deleted_personnel.html" id="deleted-person" hidden>-->
-                                <!--<span class="icon-thumbnail"><i class="dripicons-cross"></i></span>-->
-                                <!--<span class="title">Deleted</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</li>-->
+                    <a href="javascript:void(0);" class="have-submenu">
+                        <span class="icon-thumbnail"><i class="dripicons-align-justify"></i></span>
+                        <span class="title">Consolidations</span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a href="consolidations.html">
+                                <span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>
+                                <span class="title">Pending</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="done_consolidations.html">
+                                <span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>
+                                <span class="title">Done</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li> 
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
                         <span class="title" >Manage Data</span>
