Added transfer func

--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -184,9 +184,14 @@
                             <div class="col-md-12">
                                 <div class="custom-controls-stacked">
                                     <label class="custom-control custom-radio dark">
-                                        <input name="radio-stacked" class="custom-control-input" type="radio" />
+                                        <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="0" />
                                         <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description" val="0">New Group</span>
+                                        <span class="custom-control-description">New Group</span>
+                                    </label>
+                                    <label class="custom-control custom-radio dark">
+                                        <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="1" />
+                                        <span class="custom-control-indicator"></span>
+                                        <span class="custom-control-description">My Group</span>
                                     </label>
                                 </div>
                             </div>
