Assignment to Consolidation is ready

--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -182,18 +182,7 @@
                     <div class="modal-body">
                         <div class="form-row">
                             <div class="col-md-12">
-                                <div class="custom-controls-stacked">
-                                    <label class="custom-control custom-radio dark">
-                                        <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="0" />
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">New Group</span>
-                                    </label>
-                                    <label class="custom-control custom-radio dark">
-                                        <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="1" />
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">My Group</span>
-                                    </label>
-                                </div>
+                                <div class="custom-controls-stacked" id="con-group-radios"></div>
                             </div>
                         </div>
                     </div>
