--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -77,7 +77,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Group Mode* </label>
+                                    <label> Group Mode</label>
                                     <select class="form-control select" id="group-mode-select" data-placeholder="Choose mode..." tabindex="1">
                                         <option></option>
                                         <option value="Air">Air</option>
@@ -90,7 +90,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Group Forwarder*</label>
+                                    <label> Group Forwarder</label>
                                     <input class="form-control" placeholder="Group Forwarder" id="group-forwarder" />
                                 </div>
                             </div>
@@ -99,13 +99,13 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Group Ex*</label>
+                                        <label> Group Ex</label>
                                         <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Group To*</label>
+                                        <label> Group To</label>
                                         <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
                                     </div>
                                 </div>
@@ -114,12 +114,12 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Group Cost*</label>
+                                        <label> Group Cost</label>
                                         <input class="form-control" placeholder="Type group cost..." id="group-cost" />
                                     </div>
                                 </div>
                                 <div class="form-group col-sm-6">
-                                    <label>Group deadline*</label>
+                                    <label>Group deadline</label>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                         <input class="single-date-picker form-control" type="text" placeholder="Select group deadline" id="group-deadline" />
@@ -263,7 +263,7 @@
         </section>
 
         <script>
-            if (typeof module === "object") {
+            if (typeof module === 'object') {
                 window.module = module
                 module = undefined
             }
@@ -316,9 +316,9 @@
         <script src="../utilities/consolidations.js"></script>
         <script src="../library/db.js"></script>
         <script>
-            const electron = require("electron")
-            const { session } = require("electron")
-            const { app, BrowserWindow } = require("electron").remote
+            const electron = require('electron')
+            const { session } = require('electron')
+            const { app, BrowserWindow } = require('electron').remote
             const { ipcRenderer } = electron
 
             let myConsolidations = new ConsolidationsClass()
