--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -46,7 +46,7 @@
     </head>
     <body class="top-navigation">
         <!-- Start Cities modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="city-modal">
+        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="city-modal" data-keyboard="false" data-backdrop="static">
             <div id="city-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -72,7 +72,7 @@
         </div>
         <!-- End Cities modal -->
         <!-- Start Vessels modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="vessel-modal">
+        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="vessel-modal" data-keyboard="false" data-backdrop="static">
             <div id="vessel-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -98,7 +98,7 @@
         </div>
         <!-- End Vessels modal -->
         <!-- Start Service type modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="service-type-modal">
+        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="service-type-modal" data-keyboard="false" data-backdrop="static">
             <div id="service-type-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -135,7 +135,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/diana_logo.jpg" />
+                            <img src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
