--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -69,7 +69,7 @@
     <body class="top-navigation">
         <!-- Start Notes modal -->
         <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="consol-notes-modal">
-            <div id="edit-notes-consolidation-head" class="modal-dialog modal-sm">
+            <div id="edit-notes-consolidation-head" class="modal-dialog modal-sm" data-keyboard="false" data-backdrop="static">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
@@ -96,7 +96,7 @@
         <!-- Start Notes modal -->
         <!-- Start Consolidation group modal -->
         <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="assignment-group-modal">
-            <div id="assignment-modal-header" class="modal-dialog">
+            <div id="assignment-modal-header" class="modal-dialog" data-keyboard="false" data-backdrop="static">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
@@ -168,7 +168,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/diana_logo.jpg" />
+                            <img src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
@@ -292,7 +292,7 @@
         </section>
 
         <script>
-            if (typeof module === "object") {
+            if (typeof module === 'object') {
                 window.module = module
                 module = undefined
             }
@@ -345,10 +345,10 @@
         <script src="../utilities/doneConsolidations.js"></script>
         <script src="../library/db.js"></script>
         <script>
-            const { remote } = require("electron")
-            const electron = require("electron")
-            const { session } = require("electron")
-            const { app, BrowserWindow } = require("electron").remote
+            const { remote } = require('electron')
+            const electron = require('electron')
+            const { session } = require('electron')
+            const { app, BrowserWindow } = require('electron').remote
             const { ipcRenderer } = electron
 
             let myDoneConsolidations = new DoneConsolidationsClass()
