--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -62,7 +62,7 @@
     </head>
     <body class="top-navigation">
         <!-- Start Job modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" id="add-job-modal" style="top: 15%">
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" id="add-job-modal" style="top: 15%" data-keyboard="false" data-backdrop="static">
             <div id="job-modal-header" class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -126,8 +126,9 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label> Forwarder</label>
-                                        <input class="form-control" placeholder="Type forwarder data..." id="forwarder" />
+                                        <label> Service type</label>
+                                        <a id="service-type-info" href="#"><i class="fa fa-info"></i></a>
+                                        <select class="form-control select" id="service-type-select" data-placeholder="Choose service type..." tabindex="1"></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -144,13 +145,19 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-4">
+                                    <div class="form-group">
+                                        <label> Forwarder</label>
+                                        <input class="form-control" placeholder="Type forwarder data..." id="forwarder" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Reference</label>
                                         <input class="form-control" placeholder="Type reference number..." id="reference" type="text" />
                                     </div>
                                 </div>
-                                <div class="form-group col-sm-6">
+                                <div class="form-group col-sm-4">
                                     <label>Deadline*</label>
                                     <a id="remove-date" href="#"><i class="fa fa-calendar-minus-o"></i></a>
                                     <div class="input-group">
@@ -178,7 +185,7 @@
         <!-- End Job modal -->
 
         <!-- Start Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="costs-modal">
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="costs-modal" data-keyboard="false" data-backdrop="static">
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -279,7 +286,7 @@
         <!-- End Costs modal -->
 
         <!-- Start Personnel Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="personnel-costs-modal">
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="personnel-costs-modal" data-keyboard="false" data-backdrop="static">
             <div id="personnel-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -337,7 +344,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/diana_logo.jpg" />
+                            <img src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
@@ -459,7 +466,7 @@
         </section>
 
         <script>
-            if (typeof module === "object") {
+            if (typeof module === 'object') {
                 window.module = module
                 module = undefined
             }
@@ -518,10 +525,10 @@
         <script src="../utilities/transfers.js"></script>
         <script src="../library/db.js"></script>
         <script>
-            const { remote } = require("electron")
-            const electron = require("electron")
-            const { session } = require("electron")
-            const { app, BrowserWindow } = require("electron").remote
+            const { remote } = require('electron')
+            const electron = require('electron')
+            const { session } = require('electron')
+            const { app, BrowserWindow } = require('electron').remote
             const { ipcRenderer } = electron
 
             let myTransfers = new TransfersClass()
