--- a/pages/login.html
+++ b/pages/login.html
@@ -52,7 +52,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="login-div">
-                        <img src="../assets/icons/diana_logo.jpg">
+                        <img src="../assets/icons/new_diana_logo.png">
 
                         </br>
                         </br>
