--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -53,7 +53,7 @@
                 <div class="col-12 p-0">
 
 
-                    <img src="../assets/icons/diana_logo.jpg">
+                    <img src="../assets/icons/new_diana_logo.png">
 
                     <ul class="list-unstyled m-0 float-right">
                         <li class="">
