Added servie type select on individuals

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label> KG</label>
+                                        <label> WEIGHT (KG)</label>
                                         <input type="number" class="form-control" placeholder="Type Kilos..." id="kg" />
                                     </div>
                                 </div>
@@ -220,20 +220,6 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Group Forwarder</label>
-                                        <input class="form-control" placeholder="Group forwarder" id="group_forwarder" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label> Group ID</label>
-                                        <input class="form-control" placeholder="Group ID" id="group_id" disabled />
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
                                         <label> Group Cost</label>
                                         <input class="form-control" placeholder="Type group cost..." id="group_cost" />
                                     </div>
@@ -250,6 +236,20 @@
                                     <div class="form-group">
                                         <label> Group To*</label>
                                         <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> Group ID</label>
+                                        <input class="form-control" placeholder="Group ID" id="group_id" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> Group Forwarder</label>
+                                        <input class="form-control" placeholder="Group forwarder" id="group_forwarder" />
                                     </div>
                                 </div>
                             </div>
