--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -100,7 +100,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                        <h5 class="modal-title">Consolidation Groups</h5>
+                        <h5 class="modal-title">Consolidations</h5>
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
                     <div class="modal-body">
