--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -70,7 +70,6 @@
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
                         <h5 class="modal-title">Consolidation Data</h5>
-
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
                     <div class="modal-body">
@@ -90,8 +89,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Forwarder</label>
-                                    <input class="form-control" placeholder="Group Forwarder" id="group-forwarder" />
+                                    <label> Service type</label>
+                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service type..." tabindex="1"></select>
                                 </div>
                             </div>
                         </div>
@@ -126,6 +125,15 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> Forwarder</label>
+                                        <input class="form-control" placeholder="Group Forwarder" id="group-forwarder" />
+                                    </div>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                     <div class="modal-footer">
