Finished help modal

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -63,79 +63,36 @@
     <body class="top-navigation">
         <!-- Start Help modal -->
         <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
-            <div id="cost-modal-header" class="modal-dialog">
+            <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <div class="row" style="width: 100%">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <button class="btn btn-success" id="help-instructions" style="width: 100%">INSTRUCTIONS</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <button class="btn btn-danger" id="help-visualizer" style="width: 100%">VISUALIZER</button>
-                                </div>
-                            </div>
-                        </div>
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Help</h5>
+
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
-                    <div class="modal-body" id="help-modal-body">
-                        <div class="col-md-12" id="instrctions-div">
-                            <img src="../assets/images/helpers/a4.jpeg" />
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h4>General instructions</h4>
+                                <p class="help-text">
+                                    You can find info for the general use of the app on this <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-md-12" id="visualizer-div">
-                            <img src="../assets/images/helpers/a4.jpeg" />
-                            <div class="custom-controls-stacked" id="visualizer-radios">
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="1" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO A</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="2" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO B</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="3" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO C</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="4" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO D</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="5" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO E</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="6" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO F</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="7" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO G</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="8" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO H</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="9" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO I</span>
-                                </label>
-                                <label class="custom-control custom-radio dark">
-                                    <input name="radio-stacked" class="custom-control-input con-group" type="radio" value="10" />
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">SCENARIO J</span>
-                                </label>
+                        <hr />
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h4>Scenarios visualizer</h4>
+                                <p class="help-text">A full scenarions visualization can be found on this <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a></p>
+                            </div>
+                        </div>
+                        <hr />
+
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h4>Scenarios</h4>
+                                <div id="append-scenarios"></div>
                             </div>
                         </div>
                     </div>
