Fixed view issue and modals

--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -131,8 +131,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Service type</label>
-                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service type..." tabindex="1"></select>
+                                    <label> Service</label>
+                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service..." tabindex="1"></select>
                                 </div>
                             </div>
                         </div>
@@ -156,14 +156,14 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Consolidation Cost</label>
-                                        <input class="form-control" placeholder="Type group cost..." id="group-cost" />
+                                        <input class="form-control" placeholder="Enter consol. cost..." id="group-cost" />
                                     </div>
                                 </div>
                                 <div class="form-group col-sm-6">
-                                    <label>deadline</label>
+                                    <label>Deadline</label>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input class="single-date-picker form-control" type="text" placeholder="Select group deadline" id="group-deadline" />
+                                        <input class="single-date-picker form-control" type="text" placeholder="Select consol. deadline" id="group-deadline" />
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Forwarder</label>
-                                        <input class="form-control" placeholder="Group Forwarder" id="group-forwarder" />
+                                        <input class="form-control" placeholder="Enter consol. forwarder" id="group-forwarder" />
                                     </div>
                                 </div>
                             </div>
