--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -168,7 +168,7 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label> Service type</label>
+                                        <label> Service</label>
                                         <a id="service-type-info" href="#"><i class="fa fa-info"></i></a>
                                         <select class="form-control select" id="service-type-select" data-placeholder="Choose service type..." tabindex="1"></select>
                                     </div>
