--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -145,7 +145,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                        <h5 class="modal-title">Service Types</h5>
+                        <h5 class="modal-title">Services</h5>
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
                     <div class="modal-body">
