--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -477,7 +477,7 @@
                         </li>
 
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button>
+                        <!-- <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button> -->
                     </ul>
                 </div>
             </nav>
