--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -226,7 +226,7 @@
                             <button id="empty-trashcan" class="btn btn-success mt-2">EMPTY TRASHCAN</button>
                         </li>
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button>
+                        <!-- <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button> -->
                     </ul>
                 </div>
             </nav>
